@@ -4,6 +4,7 @@
 - Add mod options panel setting for extra debugging logging and reduce default logging detail
 - Add mod options panel button to regenerate building buttons
 - Adjust render lighting angle to reduce effects of themes with over-saturated light
+- Use first submesh as render mesh when it has more tris than main mesh
 - Wait until confirmation level is fully loaded before generating thumbnails
 - Store building buttons directly in BuildingData record
 - Force override of thumbnail tooltips on display (to ensure nothing else is overriding them)
